# mcp-stepik

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  Makefile  README.md  clippy.toml  docker-compose.yml  pyproject.toml
.github/workflows/: docker-image.yml
docs/adr/: 0001-fastmcp-http-only.md  0002-state-and-tasks-rust.md  0003-course-ir-sync.md  README.md
docs/architecture/: OVERVIEW.md
examples/demo/: course.ir.json
python/mcp_stepik/: __init__.py  client.py  ir_io.py  ir_models.py  paths.py  server.py  settings.py  sync.py  task_bridge.py  worker.py
schemas/: course.ir.schema.json
scripts/: live_smoke.py  mcp_client_smoke.py  rust-coverage.sh
src/: lib.rs
tests/: test_client_http.py  test_client_http_full.py  test_server_workflow.py  test_sync.py  test_unit_helpers.py  test_workflow_native.py
