[package]
name = "mcp-stepik-core"
version = "0.1.0"
edition = "2021"
description = "Rust TaskStore (rusqlite) exposed to Python via PyO3"
license = "MIT"
publish = false

[lib]
name = "_tasks"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.29" }
rusqlite = { version = "0.37", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
parking_lot = "0.12"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]

[dev-dependencies]
pyo3 = { version = "0.29", features = ["auto-initialize"] }
tempfile = "3"
